Fixed #23 fazendo um wrap antes de chegar em 1024px

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,8 +206,10 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    width: 1100px;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .box-servico {
@@ -221,6 +223,8 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
     line-height: 1.6;
     margin-bottom: 60px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .box-servico__image {
@@ -660,10 +664,11 @@ footer p {
         justify-content: center;
         align-items: center;
         justify-content: center;
+        padding: 0;
     }
 
     .servicos-title {
-        padding-top: 60px;
+        padding-top: 80px;
         padding-bottom: 30px;
     }
 
